<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#08F525"
        android:onClick="tutorial_point"
        android:text="@string/tutorial_point"
        android:layout_below="@id/imageView"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textSize="20sp"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#08F525"
        android:onClick="web_dev"
        android:text="@string/W3school"
        android:layout_below="@id/button"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#08F525"
        android:onClick="geeks"
        android:text="@string/geeks_for_geeks"
        android:layout_below="@id/button2"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textSize="20sp"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#08F525"
        android:onClick="WEBed"
        android:text="@string/web_editor"
        android:layout_below="@id/button3"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textSize="20sp"
         />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:background="@drawable/studypoint"
        android:onClick="develop"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#08F525"
        android:onClick="python"
        android:text="@string/python_interpreter"
        android:layout_below="@id/button4"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textSize="20sp"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#08F525"
        android:onClick="compilers"
        android:text="@string/compilers"
        android:layout_below="@id/button5"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textSize="20sp"
        />


</RelativeLayout>